win/loss pop up adds

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="lead">Basketball edition!</p>
         </div>
     </div>
-
+    <div class="backgroundimg">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -42,14 +42,19 @@
 
             </div>
             <div class="col-md-6">
+                <h3 id="newGame">SPACE to Continue</h3>
                 <img id="winner" src="./assets/images/winner.gif" alt="You Won"/>
+                <h3 id="win">Game Winner!</h3>
 
+                <h3 id="tryAgain">SPACE to Try Again</h3>
                 <img id="fouledOut" src="./assets/images/fouledout.gif" alt="You fouled out"/>
+                <h1 id="loser">You Fouled Out!</h1>
 
-                <h2 id="newGame">Press SPACE to Start</h2>
+                
                 <img id="game" src="" alt=""/>
                 
             </div>
+        </div>
         </div>
 
     </div>
